--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -1,15 +1,12 @@
 <?xml version="1.0"?>
-<ruleset>
+<ruleset name="WP library">
 	<file>./src</file>
 	<arg value="ps"/>
 	<arg name="extensions" value="php"/>
 	<config name="minimum_supported_wp_version" value="5.3"/>
 
 	<rule ref="WordPress">
-		<exclude name="Generic.Commenting.DocComment.MissingShort" />
-		<exclude name="Squiz.Commenting.FunctionComment" />
 		<exclude name="WordPress.WP.I18n"/>
-		<exclude name="Squiz.Commenting.FileComment"/>
 		<exclude name="WordPress.Files.FileName" />
 		<exclude name="WordPress.WP.GlobalVariablesOverride.OverrideProhibited" />
 	</rule>
