--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     ],
     "require": {},
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.3",
+        "squizlabs/php_codesniffer": "*",
         "dealerdirect/phpcodesniffer-composer-installer": "*",
-        "wp-coding-standards/wpcs": "^1.1"
+        "wp-coding-standards/wpcs": "*"
     },
     "autoload": {
         "psr-4": {
