--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "mail@torounit.com"
         }
     ],
-    "require": {},
+    "require": {
+        "doctrine/inflector": "^2.0"
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "*",
         "dealerdirect/phpcodesniffer-composer-installer": "*",
